--- a/sabores/assets/css/cadastro.css
+++ b/sabores/assets/css/cadastro.css
@@ -1,3 +1,13 @@
+
+
+  .header-verde {
+    background-color: #2e7d32; /* Verde personalizado */
+    color: white;
+  }
+
+
+
+
 body {
     background: linear-gradient(to right, #f8f9fa, #e9ecef);
   }
@@ -9,5 +19,15 @@ body {
   input:focus {
     border-color: #0d6efd;
     box-shadow: 0 0 0 0.25rem rgba(13,110,253,0.25);
+  }
+  
+  header {
+    background-color: #2e7d32; /* verde escuro */
+    padding: 15px 30px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: white;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.2);
   }
   
