--- a/sabores/assets/css/cadastro.css
+++ b/sabores/assets/css/cadastro.css
@@ -17,8 +17,8 @@ body {
   }
   
   input:focus {
-    border-color: #0d6efd;
-    box-shadow: 0 0 0 0.25rem rgba(13,110,253,0.25);
+    border-color: #2e7d32 ;
+    box-shadow: 0 0 0 0.25rem #2e7d32;
   }
   
   header {
@@ -30,4 +30,16 @@ body {
     color: white;
     box-shadow: 0 2px 4px rgba(0,0,0,0.2);
   }
+
+  .btn-verde {
+    background-color: #2e7d32; /* verde médio */
+    border-color: #2e7d32;
+    color: white;
+  }
+  
+  .btn-verde:hover {
+    background-color: #2e7d32;
+    border-color: #2e7d32;
+  }
+  
   
