--- a/sabores/assets/css/inserir.css
+++ b/sabores/assets/css/inserir.css
@@ -14,7 +14,7 @@ body {
   }
   
   .btn-success {
-    background-color: ##2e7d32;
+    background-color: #2e7d32;
     border-color: #2e7d32;
   }
   
