--- a/Sabores e Temperos/assets/css/style.css
+++ b/Sabores e Temperos/assets/css/style.css
@@ -123,4 +123,22 @@
     flex: 1; /* Faz o main ocupar o espaço restante */
   }
   
+  html, body {
+  height: 100%;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+main {
+  flex: 1; /* Isso faz o main ocupar todo o espaço disponível */
+}
+
+footer {
+  background-color: #2e7d32;
+  color: white;
+  text-align: center;
+  padding: 1rem;
+}
+
 
